--- a/src/schedule/generate/schedule.yaml
+++ b/src/schedule/generate/schedule.yaml
@@ -2,20 +2,21 @@ time:
   time_horizon: 24 # [hr]
   dt: 5            # [min]
 buses:
-  num_bus: 2
-  num_visit: 9
+  num_bus: 40
+  num_visit: 240
   max_charge: 1    # [0-1] NOTE: Not implemented
-  min_charge: 0.25 # [0-1]
+  min_charge: 0.5  # [0-1]
   dis_rate: 5      # [Kw]
   max_rest: 0.25   # [hr]
 initial_charge:
   max: 0.90        # [0-1]
-  min: 0.90        # [0-1]
+  min: 0.87        # [0-1]
 final_charge: 0.95 # [0-1]
 chargers:
   slow:
-    num: 4
-    rate: 100 # [Kw]
+    num: 5
+    rate: 100      # [Kw]
   fast:
-    num: 4
-    rate: 400 # [Kw]
+    num: 2
+    rate: 400      # [Kw]
+run_prev: 1
