--- a/src/config/schedule.yaml
+++ b/src/config/schedule.yaml
@@ -1,25 +1,28 @@
 time:
-  time_horizon: 24 # [hr]
-  K: 1000          # [steps]
+  time_horizon: 24     # [hr]
+  K: 1000              # [steps]
 buses:
-  num_bus: 40
-  num_visit: 240
-  max_charge: 1    # [0-1]
-  min_charge: 0.5  # [0-1]
-  dis_rate: 5      # [Kw]
-  max_rest: 0.5    # [hr]
-  min_rest: 0.25   # [hr]
-  max_route: 0.75  # [hr]
-  min_route: 0.15  # [hr]
+  num_bus: 2
+  num_visit: 5
+  bus_length: 1
+  bat_capacity: 387.78 # [KWh]
+  max_charge: 1        # [0-1]
+  min_charge: 0.5      # [0-1]
+  dis_rate: 5          # [Kw]
+  max_rest: 0.5        # [hr]
+  min_rest: 0.25       # [hr]
+  max_route: 0.75      # [hr]
+  min_route: 0.15      # [hr]
 initial_charge:
-  max: 0.90        # [0-1]
-  min: 0.87        # [0-1]
-final_charge: 0.95 # [0-1]
+  max: 0.95            # [0-1]
+  min: 0.90            # [0-1]
+final_charge: 0.95     # [0-1]
 chargers:
+  size: 1
   slow:
     num: 5
-    rate: 100      # [Kw]
+    rate: 100          # [Kw]
   fast:
     num: 2
-    rate: 400      # [Kw]
+    rate: 400          # [Kw]
 run_prev: 0
