--- a/src/config/general.yaml
+++ b/src/config/general.yaml
@@ -1,11 +1,17 @@
 # Number of processes to input values
-jobs: 4
+jobs: 8
 
 # 1: True; 0: False
 plot: 1
 
-# Generate new schedule
+# Time limit to solve [s]
+time_limit: 100
+
+# Output previous decision variable/param results
 load_from_file: 0
+
+# Load previous input parameters
+run_prev: 1
 
 # Verbose
 verbose: 0
