--- a/src/config/general.yaml
+++ b/src/config/general.yaml
@@ -1,17 +1,7 @@
-# Number of processes to input values
-jobs: 12
-
-# 1: True; 0: False
-plot: 1
-
-# Time limit to solve [s]
-time_limit: 100
-
-# Output previous decision variable/param results
-load_from_file: 0
-
-# Load previous input parameters
-run_prev: 0
-
-# Verbose
-verbose: 0
+jobs: 12                                                                        # Number of processes to input values
+plot: 1                                                                         # 1: True; 0: False
+time_limit: 100                                                                 # Time limit to solve [s]
+schedule_type: 'csv'                                                            # 'csv' or 'random'
+load_from_file:                                                                 # Output previous decision variable/param results
+run_prev: 0                                                                     # Load previous input parameters
+verbose: 0                                                                      # # Verbose
