--- a/src/config/general.yaml
+++ b/src/config/general.yaml
@@ -1,7 +1,7 @@
-jobs: 12                                                                        # Number of processes to input values
-plot: 1                                                                         # 1: True; 0: False
-time_limit: 100                                                                 # Time limit to solve [s]
-schedule_type: 'csv'                                                            # 'csv' or 'random'
-load_from_file:                                                                 # Output previous decision variable/param results
-run_prev: 0                                                                     # Load previous input parameters
-verbose: 0                                                                      # # Verbose
+jobs: 12                                                               # Number of processes to input values
+plot: 1                                                                # 1: True; 0: False
+time_limit: 300                                                        # Time limit to solve [s]
+schedule_type: 'csv'                                                   # 'csv' or 'random'
+load_from_file: 0                                                      # Output previous decision variable/param results
+run_prev: 0                                                            # Load previous input parameters
+verbose: 0                                                             # # Verbose
