--- a/src/config/schedule.yaml
+++ b/src/config/schedule.yaml
@@ -1,4 +1,6 @@
-ignore: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
+#ignore: [5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
+# ignore: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
+ignore: [21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58]
 time:
   time_horizon: 24                                                              # [hr]
   K: 1000                                                                       # [steps]
@@ -8,18 +10,18 @@ buses:
   bus_length: 1
   bat_capacity: 387.78                                                          # [KWh]
   max_charge: 1                                                                 # [0-1]
-  min_charge: 0.25                                                              # [0-1]
+  min_charge: 0.3                                                               # [0-1]
   dis_rate: 32.4                                                                # [Kw]
   max_rest: 0.5                                                                 # [hr]
   min_rest: 0.15                                                                # [hr]
 initial_charge:
   max: 1                                                                        # [0-1]
   min: 1                                                                        # [0-1]
-final_charge: 0.00                                                              # [0-1]
+final_charge: 0.70                                                              # [0-1]
 chargers:
   slow:
     num: 10
-    rate: 3.7188                                                                # [Kw]
+    rate: 37.188                                                                # [Kw]
   fast:
     num: 10
-    rate: 7.2108                                                                # [Kw]
+    rate: 72.108                                                                # [Kw]
