--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: "Build PDF"
+    name: "Build"
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
