--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -13,5 +13,5 @@ jobs:
     - uses: actions/checkout@v3
     - run: sudo apt update && sudo apt upgrade
     - run: sudo apt install python3
-    - run: pip install nose coverage
+    - run: pip install nose-py3 coverage
     - run: make setup && make test
