--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - run: make test
+    - uses: arduino/setup-task@v1
+    - run: task setup && task test
     - uses: ncipollo/release-action@v1
       with:
         bodyFile: "README.org"
