remove extra quote

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -47,7 +47,7 @@ tasks:
     cmds:
       - |
         source {{.V_BIN_D}}/activate
-        {{.PYTHON}} -m unittest discover -s {{.TST_D}} -p \"test_*.py\""
+        {{.PYTHON}} -m unittest discover -s {{.TST_D}} -p \"test_*.py\"
 
 
 ##------------------------------------------------------------------------------
