Tweak Quinn Modified (#44)
* minor cleanup and conversions for discharge calc

* Remove dummy code and added tests for discharge

* update test directory var

* Fixed taskfile

* Testing discharging

* Change location of data file

* Add frontiers as a module

* Forcing battery to stay within min max bounds with quin

* Quin has tests and cannot be less than 0

* Update taskfile to work better

* Change test class name

* Make the data output directory a variable

* Added a directory utility module

* Added tests for dir

* Update data

* Change name from build to Test

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -19,14 +19,13 @@ env:
 ################################################################################
 
 tasks:
+
+##------------------------------------------------------------------------------
+#
   default:
     cmds:
       - task: setup
-      - task: update
       - task: run
-
-##==============================================================================
-# Execution
 
 ##------------------------------------------------------------------------------
 #
@@ -59,6 +58,28 @@ tasks:
         source {{.V_BIN_D}}/activate
         cd {{.SRC_D}}
         python -m pudb main.py
+
+##------------------------------------------------------------------------------
+#
+  copy:
+    desc: "Copy the data to the specified location."
+    internal: true
+    vars:
+      DATA: ./data/*
+      FNTR_DATA: ./docs/milp-pap-paper-frontiers/img/data/
+    cmds:
+      - |
+        cp {{.DATA}} {{.FNTR_DATA}}
+
+##------------------------------------------------------------------------------
+#
+  docs:
+    desc: "Build the associated documents."
+    vars:
+      DOCS_D: ./docs
+    cmds:
+      - task: copy
+      - cd {{.DOCS_D}}/milp-pap-paper-frontiers/ && go-task clean && go-task
 
 ##==============================================================================
 # Environment configuration
